--- a/pages/workouts.html
+++ b/pages/workouts.html
@@ -8,40 +8,72 @@
   </head>
   <body class="is-preload">
     <!-- Wrapper -->
-      <div id="wrapper">
+    <div id="wrapper">
 
-        <!-- Header -->
-          <header id="header">
-            <div class="logo">
-              <!-- <span class="icon"></span> -->
-            </div>
-            <div class="content">
-              <div class="inner">
-                <h1>Leg day</h1>
-                <p>This and that!</p>
-              </div>
-            </div>
-            <nav>
-              <!-- <ul> -->
+      <!-- Header -->
+      <header id="header">
+        <div class="content">
+          <div class="inner">
+            <h1>Leg day</h1>
+            <p>This and that!</p>
+          </div>
+        </div>
+        <nav>
+          <ul>
 
-              <!--   <li><a href="#projects">Projects</a></li> -->
-              <!--   <\!-- <li><a href="#CV">CV</a></li> -\-> -->
-              <!--   <li><a href="#about">About</a></li> -->
-              <!--   <li><a href="#contact">Contact</a></li> -->
-              <!--   <\!--<li><a href="#elements">Elements</a></li>-\-> -->
-              <!-- </ul> -->
-            </nav>
-          </header>
+            <li><a href="#legs">Leg Day</a></li>
+            <li><a href="#push">Push</a></li>
+            <li><a href="#pull">Pull</a></li>
+            <li><a href="#knees">Knees</a></li>
+          </ul>
+        </nav>
+      </header>
 
+      <!-- Main -->
+      <div id="main">
 
-  <!-- BG -->
-    <div id="..images/bg"></div>
+        <!-- Leg day! -->
+        <article id="legs">
+          <h2 class="legs">Leg Day</h2>
+          <table id="userdata" border="2">
+            <thead>
+              <th>Exercise</th>
+              <th>Reps x Sets</th>
+              <th>Description</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Bulgarian split squat</td>
+                <td>6-8 x 3</td>
+                <td>(Reps per leg x sets). With one leg raised and placed on the bench behind you and the other leg at a right angle in front of you, your arms at your sides, squat down until your arms nearly reach the floor. Hold weights in both hands to increase the weight.</td>
+              </tr>
+              tbo
+            </tbody>
+          </table>
+        </article>
 
-  <!-- SCRIPTS -->
-    <script src="../assets/js/jquery.min.js"></script>
-    <script src="../assets/js/browser.min.js"></script>
-    <script src="../assets/js/breakpoints.min.js"></script>
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/main.js"></script>
+        <!-- Push! -->
+        <article id="push">
+          <h2 class="push">Push Day</h2>
+        </article>
+
+        <!-- Pull! -->
+        <article id="pull">
+          <h2 class="pull">Pull Day</h2>
+        </article>
+        <!-- Knees! -->
+        <article id="Knees">
+          <h2 class="Knees">Knee Recovery</h2>
+        </article>
+
+        <!-- BG -->
+        <div id="../images/bg"></div>
+
+        <!-- SCRIPTS -->
+        <script src="../assets/js/jquery.min.js"></script>
+        <script src="../assets/js/browser.min.js"></script>
+        <script src="../assets/js/breakpoints.min.js"></script>
+        <script src="../assets/js/util.js"></script>
+        <script src="../assets/js/main.js"></script>
   </body>
 </html>
