--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <!-- Body to appear the table -->
 
               <tr>
-                <td><p><a href="/pages/workouts.html">Workout routine</p></td>
+                <td><p><a href="/pages/workouts/workouts.html">Workout routine</p></td>
                 <td>2025</td>
                 <td>Workout routine</td>
               </tr>
