Attempting to fix bad link from index to workouts

--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
               <th>Description</th>
             </thead>
             <tbody>
-              <!-- Body to appear the table -->
-
               <tr>
-                <td><p><a href="/pages/workouts/workouts.html">Workout routine</p></td>
+                <td><p><a href="pages/workouts/workouts.html">Workout routine</p></td>
                 <td>2025</td>
                 <td>Workout routine</td>
               </tr>
