--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width,
                    initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/test.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
     <title>Lewis de Zoete Grundy</title>
   </head>
 
@@ -15,10 +15,14 @@
     <!-- Nav bar -->
     <div id="nav"></div>
 
+    <main class="page">
     <h1 class="major">About</h1>
         <span class="image main"><img src="/images/Portrait.jpg" alt="Portrait of Lewis de Zoete"></span>
           <p>Lewis de Zoete Grundy - PhD Student at Swinburne University of technology</p>
           <p>Interests - Computer vision, human-robot interaction, human-robot teaming</p>
+    </main>
+
+    <!-- Scripts -->
     <script src="/assets/js/nav.js"></script>
   </body>
 </html>
