--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width,
                    initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/test.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
     <title>Lewis de Zoete Grundy</title>
   </head>
 
@@ -15,32 +15,37 @@
     <!-- Nav bar -->
     <div id="nav"></div>
 
-    <h1 class="major">Contact</h1>
-    <form method="post" action="#">
-    <div class="fields">
-        <div class="field half">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" />
+    <!-- Main -->
+    <main class="page">
+        <h1 class="major">Contact</h1>
+        <form method="post" action="#">
+        <div class="fields">
+            <div class="field half">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" />
+            </div>
+            <div class="field half">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email" />
+            </div>
+            <div class="field">
+            <label for="message">Message</label>
+            <textarea name="message" id="message" rows="4"></textarea>
+            </div>
         </div>
-        <div class="field half">
-        <label for="email">Email</label>
-        <input type="text" name="email" id="email" />
-        </div>
-        <div class="field">
-        <label for="message">Message</label>
-        <textarea name="message" id="message" rows="4"></textarea>
-        </div>
-    </div>
-    <ul class="actions">
-        <li><input type="submit" value="Send Message" class="primary" /></li>
-        <li><input type="reset" value="Reset" /></li>
-    </ul>
-    </form>
-    <ul class="icons">
-    <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-    <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-    </ul>
+        <ul class="actions">
+            <li><input type="submit" value="Send Message" class="primary" /></li>
+            <li><input type="reset" value="Reset" /></li>
+        </ul>
+        </form>
+        <ul class="icons">
+        <li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+        <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+        </ul>
+    </main>
+
+    <!-- Scripts  -->
     <script src="/assets/js/nav.js"></script>
   </body>
 </html>
