--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
     <meta name="viewport"
           content="width=device-width,
                    initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="assets/css/test.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
     <title>Lewis de Zoete Grundy</title>
   </head>
 
+  <!-- Content -->
   <body data-page="index">
+    <!-- Nav bar -->
     <div id="nav"></div>
 
     <!-- Main -->
-    <div id="main">
-      <h1>Lewis de Zoete Grundy</h1>
-      <p>Computer vision for human-robot interaction.</p>
-      <p> This is the "main" section of the landing page!
-    </div>
+    <main class="page">
+      <div id="main">
+        <h1>Lewis de Zoete Grundy</h1>
+        <p>Computer vision for human-robot interaction.</p>
+        <p> This is the "main" section of the landing page!
+      </div>
+    </main>
+
+    <!-- Scripts -->
     <script src="assets/js/nav.js"></script>
     <script type="text/javascript" src="assets/js/article_popup.js"></script>
   </body>
