--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width,
                    initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/test.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
     <title>Lewis de Zoete Grundy</title>
   </head>
 
@@ -16,21 +16,26 @@
   <body data-page="projects">
     <div id="nav"></div>
 
-    <h1 class="projects">Projects</h1>
-    <table id="userdata" border="2">
-    <thead>
-        <th>Name</th>
-        <th>Year</th>
-        <th>Description</th>
-    </thead>
-    <tbody>
-        <tr>
-        <td><p><a href="projects/workouts/workouts.html">Workout routine</p></td>
-        <td>2025</td>
-        <td>Workout routine</td>
-        </tr>
-    </tbody>
-    </table>
+    <!-- Main -->
+    <main class="page">
+      <h1 class="projects">Projects</h1>
+      <table id="userdata" border="2">
+      <thead>
+          <th>Name</th>
+          <th>Year</th>
+          <th>Description</th>
+      </thead>
+      <tbody>
+          <tr>
+          <td><p><a href="projects/workouts/workouts.html">Workout routine</p></td>
+          <td>2025</td>
+          <td>Workout routine</td>
+          </tr>
+      </tbody>
+      </table>
+    </main>
+
+    <!-- SCRIPTS -->
     <script src="/assets/js/nav.js"></script>
   </body>
 </html>
