Recipes pages now (almost) working!

--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,13 @@
       <tbody>
           <tr>
           <td><p><a href="projects/workouts/workouts.html">Workout routine</p></td>
-          <td>2025</td>
+          <td>2025-present</td>
           <td>Workout routine</td>
+          </tr>
+          <tr>
+          <td><p><a href="projects/recipes/recipe_home.html">Recipes</p></td>
+          <td>2025-present</td>
+          <td>Recipes</td>
           </tr>
       </tbody>
       </table>
