--- a/projects/workouts/workouts.html
+++ b/projects/workouts/workouts.html
@@ -29,7 +29,9 @@
 <!-- Leg day! -->
 <article id="legs" class="fullscreen-article">
   <a href="#" class="close">&times;</a>
-  <h2>Leg Day</h2>
+  <h1>Leg Day</h1>
+
+  <h2>Exercises</h2>
   <table class="exercise-table" data-group="legs">
     <colgroup>
       <col class="exercise" />
@@ -39,7 +41,21 @@
       <tr>
         <th>Exercise</th>
         <th>Reps x Sets</th>
-        <ht></th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
+  <h2>Stretches</h2>
+  <table class="exercise-table stretches" data-group="legs_stretches">
+    <colgroup>
+      <col class="exercise" />
+      <col class="reps" />
+    </colgroup>
+    <thead>
+      <tr>
+        <th>Stretch</th>
+        <th>Time</th>
       </tr>
     </thead>
     <tbody></tbody>
