--- a/projects/recipes/recipe_home.html
+++ b/projects/recipes/recipe_home.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -25,7 +26,7 @@
         <thead>
             <tr>
                 <th>Recipe</th>
-                <th>Ingredients</th>
+                <th>Key Ingredients</th>
             </tr>
         </thead>
         <tbody></tbody>
@@ -41,7 +42,7 @@
         <thead>
             <tr>
                 <th>Recipe</th>
-                <th>Ingredients</th>
+                <th>Key Ingredients</th>
             </tr>
         </thead>
         <tbody></tbody>
