--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
           content="width=device-width,
                    initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="assets/css/nav.css"/>
     <title>Lewis de Zoete Grundy</title>
   </head>
 
@@ -26,6 +27,6 @@
 
     <!-- Scripts -->
     <script src="assets/js/nav.js"></script>
-    <script type="text/javascript" src="assets/js/article_popup.js"></script>
+    <!-- <script type="text/javascript" src="assets/js/article_popup.js"></script> -->
   </body>
 </html>
