--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,7 @@
           content="width=device-width,
                    initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/nav.css"/>
     <title>Lewis de Zoete Grundy</title>
   </head>
 
