--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
       </thead>
       <tbody>
           <tr>
-          <td><p><a href="projects/workouts/workouts.html">Workout routine</p></td>
+          <td><p><a href="https://LewisDeZoete.github.io/workouts_website">Workout routine</p></td>
           <td>2025-present</td>
           <td>Workout routine</td>
           </tr>
