Project restructure (and unification)

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport"
           content="width=device-width,
                    initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
-    <link rel="stylesheet" type="text/css" href="assets/css/nav.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/nav.css"/>
     <title>Lewis de Zoete Grundy</title>
   </head>
 
@@ -22,6 +22,8 @@
         <h1>Lewis de Zoete Grundy</h1>
         <p>Computer vision for human-robot interaction.</p>
         <p> This is the "main" section of the landing page!
+        <!--TODO: Put this image centred or something-->
+        <span class="image main"><img src="/images/Lewis1_CADRRAS Showcase.jpg" alt="Portrait of Lewis de Zoete"></span>
       </div>
     </main>
 
