--- a/projects.html
+++ b/projects.html
@@ -28,12 +28,12 @@
       </thead>
       <tbody>
           <tr>
-          <td><p><a href="https://LewisDeZoete.github.io/workouts_website">Workout routine</p></td>
+          <td><p><a href="projects/workouts/workouts.html">Workout routine</p></td>
           <td>2025-present</td>
           <td>Workout routine</td>
           </tr>
           <tr>
-          <td><p><a href="projects/recipes/recipe_home.html">Recipes</p></td>
+          <td><p><a href="projects/recipes/recipes.html">Recipes</p></td>
           <td>2025-present</td>
           <td>Recipes</td>
           </tr>
