--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <!-- Content -->
-  <body data-page="index">
+  <body data-page="home">
     <!-- Nav bar -->
     <div id="nav"></div>
 
@@ -20,15 +20,15 @@
     <main class="page">
       <div id="main">
         <h1>Lewis de Zoete Grundy</h1>
-        <p>Computer vision for human-robot interaction.</p>
-        <p> This is the "main" section of the landing page!
+        <h2>Computer vision for human-robot interaction.</h2>
+        <p>I am a PhD student researching computer vision methods for enabling more natural and responsive human-robot interaction.</p>
         <!--TODO: Put this image centred or something-->
-        <span class="image main"><img src="/images/Lewis1_CADRRAS Showcase.jpg" alt="Portrait of Lewis de Zoete"></span>
-      </div>
+        <div class="hero-wrapper">
+          <img src="/images/Lewis1_CADRRAS Showcase.jpg" alt="Portrait of Lewis de Zoete" class="hero-image"></span>
+        </div>
     </main>
 
     <!-- Scripts -->
     <script src="assets/js/nav.js"></script>
-    <!-- <script type="text/javascript" src="assets/js/article_popup.js"></script> -->
   </body>
 </html>
