--- a/projects.html
+++ b/projects.html
@@ -20,25 +20,20 @@
     <!-- Main -->
     <main class="page">
       <h1 class="projects">Projects</h1>
-      <table id="userdata" border="2">
-      <thead>
-          <th>Name</th>
-          <th>Year</th>
-          <th>Description</th>
-      </thead>
-      <tbody>
-          <tr>
-          <td><p><a href="projects/workouts/workouts.html">Workout routine</p></td>
-          <td>2025-present</td>
-          <td>Workout routine</td>
-          </tr>
-          <tr>
-          <td><p><a href="projects/recipes/recipes.html">Recipes</p></td>
-          <td>2025-present</td>
-          <td>Recipes</td>
-          </tr>
-      </tbody>
-      </table>
+      <p>Below are the projects that I'm currently working on. This is a non-exhaustive list, but primarily there are personal projects.</p>
+
+      <div class="card-container">
+        <a href="projects/workouts/workouts.html" class="card">
+          <h3>Workouts</h3>
+          <p><b>2023-present</b></p>
+          <p>A series of tried and tested workouts utilising a bench and free weights, as well as stretching routines. </p>
+        </a>
+        <a href="projects/recipes/recipes.html" class="card">
+          <h3>Recipes</h3>
+          <p><b>2024-present</b></p>
+          <p>A collection of accessible recipes, with a focus on high protein and low carb meals. These are mostly simple weeknight meals, or weekend snacks.</p>
+        </a>
+      </div>
     </main>
 
     <!-- SCRIPTS -->
