--- a/about.html
+++ b/about.html
@@ -17,10 +17,15 @@
     <div id="nav"></div>
 
     <main class="page">
-    <h1 class="major">About</h1>
-        <span class="image main"><img src="/images/Portrait.jpg" alt="Portrait of Lewis de Zoete"></span>
-          <p>Lewis de Zoete Grundy - PhD Student at Swinburne University of technology</p>
-          <p>Interests - Computer vision, human-robot interaction, human-robot teaming</p>
+      <h1 class="major">About</h1>
+      <p>Here's me!</p>
+      <div class="hero-wrapper">
+        <img src="/images/Portrait.jpg" alt="Portrait of Lewis de Zoete" class="hero-image">
+      </div>
+      <p>Lewis de Zoete Grundy - PhD Student at Swinburne University of technology</p>
+      <p>Interests - Computer vision, human-robot interaction, human-robot teaming</p>
+      <h1>CV<h1>
+
     </main>
 
     <!-- Scripts -->
