Recipe project should highlight "projects on nav"

--- a/projects/recipes/recipes.html
+++ b/projects/recipes/recipes.html
@@ -11,7 +11,7 @@
     <title>Lewis de Zoete Grundy</title>
 </head>
 
-<body>
+<body data-page="projects">
 <!-- Nav bar -->
 <div id="nav"></div>
 
